--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pyperclip = "^1.8.2"
 python-docx = "^1.1.0"
 pandas = "^2.2.1"
 googletrans = "4.0.0-rc1"
+gtts = "^2.5.1"
+pygame = "^2.5.2"
 
 
 [build-system]
