refactoring code; created new functions to testing work tkinter functions; add logger for tk_functions.py; add exceptions handling tk_exceptions decorator; add testing tk_functions.py; add README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "etd"
+name = "ltd"
 version = "1.0"
-description = "English Test Dictionary"
-authors = ["Zagmakk"]
+description = "Language Test Dictionary"
+authors = ["ZagMak"]
 license = "MIT"
 readme = "README.md"
 
